Opened 10 years ago

Closed 10 years ago

#3312 closed defect (fixed)

aac stream not detected

Reported by: Carl Eugen Hoyos Owned by:
Priority: important Component: avcodec
Version: git-master Keywords: aac regression
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

The sample from ticket #3311 contains two aac audio streams, only one is detected correctly, the other one shows "0 channels" since 59b68ee8

$ ffmpeg -analyzeduration 2G -probesize 2G -i aavv_mpeg2video_30_yuv420p_dar16x9_sar40x33_aac_48000_1_0.ts
ffmpeg version N-59893-g1132937 Copyright (c) 2000-2014 the FFmpeg developers
  built on Jan 16 2014 00:31:23 with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl
  libavutil      52. 62.100 / 52. 62.100
  libavcodec     55. 48.101 / 55. 48.101
  libavformat    55. 23.103 / 55. 23.103
  libavdevice    55.  5.102 / 55.  5.102
  libavfilter     4.  1.100 /  4.  1.100
  libswscale      2.  5.101 /  2.  5.101
  libswresample   0. 17.104 /  0. 17.104
  libpostproc    52.  3.100 / 52.  3.100
[aac @ 0x2136900] get_buffer() failed
    Last message repeated 1 times
[mpeg2video @ 0x2135ea0] Invalid frame dimensions 0x0.
[mpeg2video @ 0x2135440] Invalid frame dimensions 0x0.
[aac @ 0x2136900] get_buffer() failed
    Last message repeated 2 times
[aac @ 0x2137360] get_buffer() failed
[mpeg2video @ 0x2135ea0] Invalid frame dimensions 0x0.
    Last message repeated 1 times
[aac @ 0x2136900] get_buffer() failed
    Last message repeated 2 times
[mpeg2video @ 0x2135ea0] Invalid frame dimensions 0x0.
[aac @ 0x2136900] get_buffer() failed
    Last message repeated 2 times
[mpeg2video @ 0x2135440] Invalid frame dimensions 0x0.
[aac @ 0x2136900] get_buffer() failed
    Last message repeated 8 times
[mpeg2video @ 0x2135ea0] Invalid frame dimensions 0x0.
[aac @ 0x2136900] get_buffer() failed
    Last message repeated 25 times
[mpegts @ 0x2131220] probed stream 4 failed
[aac @ 0x2136900] get_buffer() failed
    Last message repeated 677 times
[mpegts @ 0x2131220] PES packet size mismatch
    Last message repeated 1 times
[aac @ 0x2136900] get_buffer() failed
[mpegts @ 0x2131220] decoding for stream 2 failed
[NULL @ 0x2138820] start time is not set in estimate_timings_from_pts
[NULL @ 0x2139280] start time is not set in estimate_timings_from_pts
[mpegts @ 0x2131220] PES packet size mismatch
    Last message repeated 1 times
[mpegts @ 0x2131220] Could not find codec parameters for stream 2 (Audio: aac ([15][0][0][0] / 0x000F), 0 channels, fltp, 170 kb/s): unspecified sample rate
Consider increasing the value for the 'analyzeduration' and 'probesize' options
[mpegts @ 0x2131220] Could not find codec parameters for stream 4 (Unknown: none ([6][0][0][0] / 0x0006)): unknown codec
Consider increasing the value for the 'analyzeduration' and 'probesize' options
[mpegts @ 0x2131220] Could not find codec parameters for stream 5 (Unknown: none ([13][0][0][0] / 0x000D)): unknown codec
Consider increasing the value for the 'analyzeduration' and 'probesize' options
[mpegts @ 0x2131220] Could not find codec parameters for stream 6 (Unknown: none ([13][0][0][0] / 0x000D)): unknown codec
Consider increasing the value for the 'analyzeduration' and 'probesize' options
Input #0, mpegts, from 'aavv_mpeg2video_30_yuv420p_dar16x9_sar40x33_aac_48000_1_0.ts':
  Duration: 00:00:15.64, start: 33114.702544, bitrate: 6486 kb/s
  Program 102
    Stream #0:0[0x200]: Video: mpeg2video (Main) ([2][0][0][0] / 0x0002), yuv420p(tv), 720x480 [SAR 32:27 DAR 16:9], max. 9000 kb/s, 29.97 fps, 29.97 tbr, 90k tbn, 59.94 tbc
    Stream #0:1[0x201]: Video: mpeg2video (Main) ([2][0][0][0] / 0x0002), yuv420p(tv, bt709), 352x240 [SAR 40:33 DAR 16:9], max. 300 kb/s, 29.97 fps, 29.97 tbr, 90k tbn, 59.94 tbc
    Stream #0:2[0x210]: Audio: aac ([15][0][0][0] / 0x000F), 0 channels, fltp, 170 kb/s
    Stream #0:3[0x212]: Audio: aac ([15][0][0][0] / 0x000F), 48000 Hz, mono, fltp, 61 kb/s
    Stream #0:4[0x230]: Unknown: none ([6][0][0][0] / 0x0006)
    Stream #0:5[0x140]: Unknown: none ([13][0][0][0] / 0x000D)
    Stream #0:6[0x158]: Unknown: none ([13][0][0][0] / 0x000D)
At least one output file must be specified

Change History (1)

comment:1 by Michael Niedermayer, 10 years ago

Reproduced by developer: set
Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.